# Bili23-Downloader-CLI

./: .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.md  README.rst  bili23.py  cli.py  config.conf  pyproject.toml  setup.py
bili23/: bili23.py
bili23/cli/: common.py  download.py
bili23/utils/: audio.py  bangumi.py  config.conf  config.py  download.py  live.py  tools.py  video.py
bili23_downloader_cli/: api.py  bili23.py  config.py  main.py  util.py
bili23_downloader_cli/cli/: common.py  download.py
bili23_downloader_cli/utils/: api.py  audio.py  bangumi.py  config.py  constant.py  download.py  live.py  tools.py  video.py
cli/: download.py
utils/: __init__.py  bangumi.py  config.py  download.py  login.py  tools.py  video.py
