[project]
name = "bili23-downloader-cli"
version = "v1.11"
description = "下载 Bilibili 视频/番剧/电影/纪录片 等资源"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Scott Sloan", email = "world1019@sina.com" }]
maintainers = [{ name = "SevenDreamer", email = "945186289.gezi@gmail.com" }]
license = { text = "MIT License" }
keywords = ["bilibili", "video-downloader", "cli"]
classifiers = [
    "Environment :: Console",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "click>=8.1.7",
    "colorama>=0.4.6",
    "pydantic-settings[toml]>=2.5.2",
    "qrcode[pil]>=8.0",
    "requests>=2.32.3",
    "rtoml>=0.11.0",
    "typer>=0.12.5",
]

[project.urls]
HomePage = "https://github.com/ScottSloan/Bili23-Downloader-CLI"
Issue = "https://github.com/ScottSloan/Bili23-Downloader-CLI/issues"

[project.scripts]
bili233 = "bili23_downloader_cli.bili23:main"
bili23_new = "bili23_downloader_cli.main:app"

[tool.commitizen]
name = "cz_gitmoji"
tag_format = "v$version"
version_scheme = "pep440"
version_provider = "pep621"
update_changelog_on_bump = true

[tool.uv]
dev-dependencies = [
    "ipykernel>=6.29.5",
]

[tool.ruff]
line-length = 120

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
